Start to add Mobility.Console.LaffStd to Mobility.OneCent.

--- a/Mobility.OneCent/Mobility.OneCent.vcxproj
+++ b/Mobility.OneCent/Mobility.OneCent.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup Label="Globals">
     <ProjectGuid>{049B9A7F-7074-41FB-8779-FBEBEDD302F6}</ProjectGuid>
@@ -21,6 +21,7 @@
   <Import Project="..\Mile.Uefi\Mile.Uefi.props" />
   <Import Project="..\Mile.Uefi.RuntimeLibrary\Mile.Uefi.RuntimeLibrary.props" />
   <ItemGroup>
+    <ClCompile Include="Mobility.Console.LaffStd.c" />
     <ClCompile Include="Mobility.OneCent.cpp" />
   </ItemGroup>
   <Import Project="..\Mile.Uefi\Mile.Uefi.targets" />
