Add Mile.Mobility package to all Mobility components.

--- a/Mobility.OneCent/Mobility.OneCent.vcxproj
+++ b/Mobility.OneCent/Mobility.OneCent.vcxproj
@@ -24,6 +24,11 @@
     <ClCompile Include="Mobility.Console.LaffStd.c" />
     <ClCompile Include="Mobility.OneCent.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Mile.Mobility">
+      <Version>1.0.135</Version>
+    </PackageReference>
+  </ItemGroup>
   <Import Project="..\Mile.Uefi\Mile.Uefi.targets" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1426" Project="Mile.Project.Cpp.targets" />
 </Project>
