--- a/Mobility.HvGcs/Mobility.HvGcs.vcxproj
+++ b/Mobility.HvGcs/Mobility.HvGcs.vcxproj
@@ -27,6 +27,9 @@
     <PackageReference Include="Mile.HyperV">
       <Version>1.1.419</Version>
     </PackageReference>
+    <PackageReference Include="Mile.Mobility">
+      <Version>1.0.135</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="..\Mile.Uefi\Mile.Uefi.targets" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1426" Project="Mile.Project.Cpp.targets" />
