--- a/Mobility.OneCent/Mobility.OneCent.vcxproj
+++ b/Mobility.OneCent/Mobility.OneCent.vcxproj
@@ -18,7 +18,7 @@
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1426" Project="Mile.Project.Platform.x64.props" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1426" Project="Mile.Project.Cpp.Default.props" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1426" Project="Mile.Project.Cpp.props" />
-  <Import Project="..\Mile.Uefi\Mile.Uefi.props" />
+  <Import Sdk="Mile.Uefi" Version="1.0.1438" Project="Mile.Uefi.props" />
   <Import Project="..\Mile.Uefi.RuntimeLibrary\Mile.Uefi.RuntimeLibrary.props" />
   <ItemGroup>
     <ClCompile Include="Mobility.BitmapFont.LaffStd.c" />
@@ -33,6 +33,6 @@
   <ItemGroup>
     <ClInclude Include="Mobility.BitmapFont.LaffStd.h" />
   </ItemGroup>
-  <Import Project="..\Mile.Uefi\Mile.Uefi.targets" />
+  <Import Sdk="Mile.Uefi" Version="1.0.1438" Project="Mile.Uefi.targets" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1426" Project="Mile.Project.Cpp.targets" />
 </Project>
