--- a/Mobility.Retrovisor/Mobility.Retrovisor.vcxproj
+++ b/Mobility.Retrovisor/Mobility.Retrovisor.vcxproj
@@ -18,7 +18,7 @@
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1426" Project="Mile.Project.Platform.x64.props" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1426" Project="Mile.Project.Cpp.Default.props" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1426" Project="Mile.Project.Cpp.props" />
-  <Import Project="..\Mile.Uefi\Mile.Uefi.props" />
+  <Import Sdk="Mile.Uefi" Version="1.0.1438" Project="Mile.Uefi.props" />
   <ItemGroup>
     <ClCompile Include="Mobility.Retrovisor.cpp" />
   </ItemGroup>
@@ -27,6 +27,6 @@
       <Version>1.0.137</Version>
     </PackageReference>
   </ItemGroup>
-  <Import Project="..\Mile.Uefi\Mile.Uefi.targets" />
+  <Import Sdk="Mile.Uefi" Version="1.0.1438" Project="Mile.Uefi.targets" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1426" Project="Mile.Project.Cpp.targets" />
 </Project>
