--- a/Mobility.OneCent/Mobility.OneCent.vcxproj
+++ b/Mobility.OneCent/Mobility.OneCent.vcxproj
@@ -32,6 +32,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Mobility.BitmapFont.LaffStd.h" />
+    <ClInclude Include="Mobility.Console.Core.h" />
   </ItemGroup>
   <Import Sdk="Mile.Uefi" Version="1.0.1438" Project="Mile.Uefi.targets" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1426" Project="Mile.Project.Cpp.targets" />
