--- a/Mobility.OneCent/Mobility.OneCent.vcxproj
+++ b/Mobility.OneCent/Mobility.OneCent.vcxproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <ClCompile Include="Mobility.BitmapFont.LaffStd.c" />
     <ClCompile Include="Mobility.Console.Core.c" />
+    <ClCompile Include="Mobility.Display.Core.c" />
     <ClCompile Include="Mobility.OneCent.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -33,6 +34,7 @@
   <ItemGroup>
     <ClInclude Include="Mobility.BitmapFont.LaffStd.h" />
     <ClInclude Include="Mobility.Console.Core.h" />
+    <ClInclude Include="Mobility.Display.Core.h" />
   </ItemGroup>
   <Import Sdk="Mile.Uefi" Version="1.0.1438" Project="Mile.Uefi.targets" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1426" Project="Mile.Project.Cpp.targets" />
