--- a/Mobility.Core.Uefi/Mobility.Core.Uefi.vcxproj
+++ b/Mobility.Core.Uefi/Mobility.Core.Uefi.vcxproj
@@ -19,6 +19,12 @@
       <Version>1.0.172</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Mobility.Uefi.Core.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Mobility.Uefi.Core.cpp" />
+  </ItemGroup>
   <Import Sdk="Mile.Uefi" Version="1.0.1438" Project="Mile.Uefi.targets" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1622" Project="Mile.Project.Cpp.targets" />
 </Project>
