--- a/Mobility.Core/Mobility.Core.vcxproj
+++ b/Mobility.Core/Mobility.Core.vcxproj
@@ -18,5 +18,17 @@
       <Version>1.0.172</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Mobility.BitmapFont.LaffStd.c" />
+    <ClCompile Include="Mobility.Console.Core.c" />
+    <ClCompile Include="Mobility.Display.Core.c" />
+    <ClCompile Include="Mobility.Unicode.Core.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Mobility.BitmapFont.LaffStd.h" />
+    <ClInclude Include="Mobility.Console.Core.h" />
+    <ClInclude Include="Mobility.Display.Core.h" />
+    <ClInclude Include="Mobility.Unicode.Core.h" />
+  </ItemGroup>
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1622" Project="Mile.Project.Cpp.targets" />
 </Project>
