--- a/Mobility.OneCent/Mobility.OneCent.vcxproj
+++ b/Mobility.OneCent/Mobility.OneCent.vcxproj
@@ -19,23 +19,14 @@
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1622" Project="Mile.Project.Cpp.Default.props" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1622" Project="Mile.Project.Cpp.props" />
   <Import Sdk="Mile.Uefi" Version="1.0.1438" Project="Mile.Uefi.props" />
+  <Import Project="..\Mobility.Core\Mobility.Core.props" />
   <ItemGroup>
-    <ClCompile Include="Mobility.BitmapFont.LaffStd.c" />
-    <ClCompile Include="Mobility.Console.Core.c" />
-    <ClCompile Include="Mobility.Display.Core.c" />
     <ClCompile Include="Mobility.OneCent.cpp" />
-    <ClCompile Include="Mobility.Unicode.Core.c" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Mile.Mobility">
       <Version>1.0.172</Version>
     </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Mobility.BitmapFont.LaffStd.h" />
-    <ClInclude Include="Mobility.Console.Core.h" />
-    <ClInclude Include="Mobility.Display.Core.h" />
-    <ClInclude Include="Mobility.Unicode.Core.h" />
   </ItemGroup>
   <Import Sdk="Mile.Uefi" Version="1.0.1438" Project="Mile.Uefi.targets" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1622" Project="Mile.Project.Cpp.targets" />
