--- a/Mobility.MinUap/Mobility.MinUap.vcxproj
+++ b/Mobility.MinUap/Mobility.MinUap.vcxproj
@@ -20,6 +20,8 @@
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1622" Project="Mile.Project.Cpp.Default.props" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1622" Project="Mile.Project.Cpp.props" />
   <Import Sdk="Mile.Uefi" Version="1.0.1438" Project="Mile.Uefi.props" />
+  <Import Project="..\Mobility.Core\Mobility.Core.props" />
+  <Import Project="..\Mobility.Core.Uefi\Mobility.Core.Uefi.props" />
   <ItemGroup>
     <ClCompile Include="Mobility.MinUap.cpp" />
   </ItemGroup>
