--- a/Mobility.Core.Uefi/Mobility.Core.Uefi.vcxproj
+++ b/Mobility.Core.Uefi/Mobility.Core.Uefi.vcxproj
@@ -4,12 +4,13 @@
     <ProjectGuid>{3FBDCF0B-51B2-47D8-990A-381F636ADD5D}</ProjectGuid>
     <RootNamespace>Mobility.Core.Uefi</RootNamespace>
     <MileProjectType>StaticLibrary</MileProjectType>
+    <MileUefiDisableUefiGuidSources>true</MileUefiDisableUefiGuidSources>
   </PropertyGroup>
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1622" Project="Mile.Project.Platform.x64.props" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1622" Project="Mile.Project.Platform.ARM64.props" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1622" Project="Mile.Project.Cpp.Default.props" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1622" Project="Mile.Project.Cpp.props" />
-  <Import Sdk="Mile.Uefi" Version="1.0.1438" Project="Mile.Uefi.props" />
+  <Import Sdk="Mile.Uefi" Version="1.0.1484" Project="Mile.Uefi.props" />
   <Import Project="..\Mobility.Core\Mobility.Core.props" />
   <ItemGroup>
     <None Include="Mobility.Core.Uefi.props" />
@@ -25,5 +26,6 @@
   <ItemGroup>
     <ClCompile Include="Mobility.Uefi.Core.cpp" />
   </ItemGroup>
+  <Import Sdk="Mile.Uefi" Version="1.0.1484" Project="Mile.Uefi.targets" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1622" Project="Mile.Project.Cpp.targets" />
 </Project>
