--- a/Mobility.OneCent/Mobility.OneCent.vcxproj
+++ b/Mobility.OneCent/Mobility.OneCent.vcxproj
@@ -21,6 +21,7 @@
   <Import Sdk="Mile.Uefi" Version="1.0.1484" Project="Mile.Uefi.props" />
   <Import Project="..\Mobility.Core\Mobility.Core.props" />
   <Import Project="..\Mobility.Core.Uefi\Mobility.Core.Uefi.props" />
+  <Import Project="..\Mobility.Otokonoko\Mobility.Otokonoko.props" />
   <ItemGroup>
     <ClCompile Include="Mobility.OneCent.cpp" />
   </ItemGroup>
