--- a/Mile.Uefi.RuntimeLibrary/Mile.Uefi.RuntimeLibrary.props
+++ b/Mile.Uefi.RuntimeLibrary/Mile.Uefi.RuntimeLibrary.props
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
-  PROJECT:   Mouri Internal Library Essentials
-  FILE:      Mile.Uefi.RuntimeLibrary.props
-  PURPOSE:   Property sheet for UEFI Runtime Library project
+  PROJECT:    Mouri Internal Library Essentials
+  FILE:       Mile.Uefi.RuntimeLibrary.props
+  PURPOSE:    Property sheet for UEFI Runtime Library project
 
-  LICENSE:   The MIT License
+  LICENSE:    The MIT License
 
-  DEVELOPER: Mouri_Naruto (Mouri_Naruto AT Outlook.com)
+  MAINTAINER: MouriNaruto (Kenji.Mouri@outlook.com)
 -->
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
