Add Mobility.Runtime.Core to Mobility.Core.

--- a/Mobility.Core/Mobility.Core.vcxproj
+++ b/Mobility.Core/Mobility.Core.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="Mobility.Display.Core.c" />
     <ClCompile Include="Mobility.Memory.Bitmap.c" />
     <ClCompile Include="Mobility.Memory.SmallHeap.c" />
+    <ClCompile Include="Mobility.Runtime.Core.c" />
     <ClCompile Include="Mobility.Unicode.Core.c" />
   </ItemGroup>
   <ItemGroup>
@@ -36,6 +37,7 @@
     <ClInclude Include="Mobility.Display.Core.h" />
     <ClInclude Include="Mobility.Memory.Bitmap.h" />
     <ClInclude Include="Mobility.Memory.SmallHeap.h" />
+    <ClInclude Include="Mobility.Runtime.Core.h" />
     <ClInclude Include="Mobility.Unicode.Core.h" />
   </ItemGroup>
   <Import Sdk="Mile.Uefi" Version="1.0.1484" Project="Mile.Uefi.targets" />
