Add Mobility.Memory.InternalHeap to Mobility.Core.

--- a/Mobility.Core/Mobility.Core.vcxproj
+++ b/Mobility.Core/Mobility.Core.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="Mobility.BitmapFont.LaffStd.c" />
     <ClCompile Include="Mobility.Console.Core.c" />
     <ClCompile Include="Mobility.Display.Core.c" />
+    <ClCompile Include="Mobility.Memory.InternalHeap.c" />
     <ClCompile Include="Mobility.Memory.SmallHeap.c" />
     <ClCompile Include="Mobility.Runtime.Core.c" />
     <ClCompile Include="Mobility.Unicode.Core.c" />
@@ -34,6 +35,7 @@
     <ClInclude Include="Mobility.BitmapFont.LaffStd.h" />
     <ClInclude Include="Mobility.Console.Core.h" />
     <ClInclude Include="Mobility.Display.Core.h" />
+    <ClInclude Include="Mobility.Memory.InternalHeap.h" />
     <ClInclude Include="Mobility.Memory.SmallHeap.h" />
     <ClInclude Include="Mobility.Runtime.Core.h" />
     <ClInclude Include="Mobility.Unicode.Core.h" />
