--- a/Mobility.Core/Mobility.Core.vcxproj
+++ b/Mobility.Core/Mobility.Core.vcxproj
@@ -11,6 +11,7 @@
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1827" Project="Mile.Project.Platform.ARM64.props" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1827" Project="Mile.Project.Cpp.Default.props" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1827" Project="Mile.Project.Cpp.props" />
+  <Import Condition="'$(Platform)'=='x64'" Project="$(VCTargetsPath)\BuildCustomizations\masm.props" />
   <Import Sdk="Mile.Uefi" Version="1.0.1484" Project="Mile.Uefi.props" />
   <ItemGroup>
     <None Include="Mobility.Core.props" />
@@ -28,6 +29,7 @@
     <ClCompile Include="Mobility.Memory.InternalHeap.c" />
     <ClCompile Include="Mobility.Memory.SmallHeap.c" />
     <ClCompile Include="Mobility.Runtime.Core.c" />
+    <ClCompile Include="Mobility.Runtime.x64.c" />
     <ClCompile Include="Mobility.Unicode.Core.c" />
   </ItemGroup>
   <ItemGroup>
@@ -38,8 +40,18 @@
     <ClInclude Include="Mobility.Memory.InternalHeap.h" />
     <ClInclude Include="Mobility.Memory.SmallHeap.h" />
     <ClInclude Include="Mobility.Runtime.Core.h" />
+    <ClInclude Include="Mobility.Runtime.x64.h" />
     <ClInclude Include="Mobility.Unicode.Core.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Mobility.Runtime.x64.Assembly.asm" />
+  </ItemGroup>
+  <Target Name="MobilityCoreBuildAssemblySource" BeforeTargets="_MASM;_MARMASM">
+    <ItemGroup Condition="'$(Platform)' == 'x64'">
+      <MASM Include="Mobility.Runtime.x64.Assembly.asm" />
+    </ItemGroup>
+  </Target>
   <Import Sdk="Mile.Uefi" Version="1.0.1484" Project="Mile.Uefi.targets" />
   <Import Sdk="Mile.Project.Configurations" Version="1.0.1827" Project="Mile.Project.Cpp.targets" />
+  <Import Condition="'$(Platform)'=='x64'" Project="$(VCTargetsPath)\BuildCustomizations\masm.targets" />
 </Project>
