--- a/Mobility.Core/Mobility.Core.vcxproj
+++ b/Mobility.Core/Mobility.Core.vcxproj
@@ -38,23 +38,23 @@
     <ClInclude Include="Mobility.Memory.SmallHeap.h" />
     <ClInclude Include="Mobility.Platform.Interface.h" />
     <ClInclude Include="Mobility.Runtime.Core.h" />
-    <ClInclude Include="Mobility.Runtime.x64.h" />
+    <ClInclude Include="Mobility.Platform.x64.h" />
     <ClInclude Include="Mobility.Unicode.Core.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Mobility.Runtime.x64.c" />
+    <None Include="Mobility.Platform.x64.c" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Mobility.Runtime.x64.Assembly.asm" />
+    <None Include="Mobility.Platform.x64.Assembly.asm" />
   </ItemGroup>
   <Target Name="MobilityCoreBuildAssemblySource" BeforeTargets="_MASM;_MARMASM">
     <ItemGroup Condition="'$(Platform)' == 'x64'">
-      <MASM Include="Mobility.Runtime.x64.Assembly.asm" />
+      <MASM Include="Mobility.Platform.x64.Assembly.asm" />
     </ItemGroup>
   </Target>
   <Target Name="MobilityCoreBuildCSource" BeforeTargets="BeforeClCompile">
     <ItemGroup Condition="'$(Platform)' == 'x64'">
-      <ClCompile Include="Mobility.Runtime.x64.c" />
+      <ClCompile Include="Mobility.Platform.x64.c" />
     </ItemGroup>
   </Target>
   <Import Sdk="Mile.Uefi" Version="1.0.1484" Project="Mile.Uefi.targets" />
